--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>JWT Test</title>
+  <meta http-equiv="refresh" content="0; url=jwt-theft.html">
+  <title>Redirecting...</title>
 </head>
 <body>
-  <h1>It works!</h1>
-  <p>If you see this, your GitHub Pages site is live.</p>
+  <p>Redirecting to payload...</p>
 </body>
 </html>
